Some cleaning and tuning
Made dynamic loading for menu and footer items. Added own javascript
file. Changed vapaa-aika menu item to projektit.

--- a/career.html
+++ b/career.html
@@ -14,19 +14,14 @@
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript">window.jQuery || document.write('<script type="text\/javascript" src="js\/1.11.1.jquery.min"><\/script>')</script>
 
+    <script src="js/myscripts.js"></script>
+
 </head>
 <body>
     <header>
         <h1>Työ ja koulutus</h1>
         <br class="clear"/>
-        <nav>
-            <ul>
-                <li><a href="index.html">Etusivu</a></li>
-                <li><a href=career.html>Työ ja koulutus</a></li>
-                <li><a href="freetime.html">Vapaa-aika</a></li>
-                <li><a href=contact.html>Ota yhteyttä</a></li>
-            </ul>
-        </nav>
+        <div id="menu"></div>
     </header>
 
     <section class="container">
@@ -92,14 +87,7 @@
         <br class="clear"/>
     </section>
 
-    <footer>
-        <h2 class="hidden">Our footer</h2>
-        <section id="copyright">
-            <h3 class="hidden">Copyright notice</h3>
-            <div class="wrapper">
-                &copy; Copyright 2015 by <a href="index.html">Kari Himself</a>. All Rights Reserved.
-            </div>
-        </section>
-    </footer>
+    <div id="footer2"></div>
+
 </body>
 </html>
