--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,8 @@
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript">window.jQuery || document.write('<script type="text\/javascript" src="js\/1.11.1.jquery.min"><\/script>')</script>
 
+    <script src="js/myscripts.js"></script>
+
 </head>
 <body>
     <header>
@@ -56,15 +58,7 @@
     </form>
 
     <br class="clear"/>
-    <footer>
-        <h2 class="hidden">Our footer</h2>
-        <section id="copyright">
-            <h3 class="hidden">Copyright notice</h3>
-            <div class="wrapper">
-                &copy; Copyright 2015 by <a href="index.html">Kari Himself</a>. All Rights Reserved.
-            </div>
-        </section>
+    <div id="footer2"></div>
 
-    </footer>
 </body>
 </html>
