--- a/freetime.html
+++ b/freetime.html
@@ -14,21 +14,26 @@
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript">window.jQuery || document.write('<script type="text\/javascript" src="js\/1.11.1.jquery.min"><\/script>')</script>
 
+    <script src="js/myscripts.js"></script>
 
 </head>
 <body>
-<header>
-    <h1>Vapaa-aika - TODO...</h1>
-    <br class="clear"/>
-    <nav>
-        <ul>
-            <li><a href="index.html">Etusivu</a></li>
-            <li><a href=career.html>Työ ja koulutus</a></li>
-            <li><a href="javascript:void(0)">Vapaa-aika</a></li>
-            <li><a href=contact.html>Ota yhteyttä</a></li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <h1>Projektit - TODO...</h1>
+        <br class="clear"/>
+        <div id="menu"></div>
+    </header>
+    <section id="boxcontent2">
+        <article>
+            <h3>GitHub-projektit</h3>
+            <p>
+                Laita tänne linkki ja plaa plaa...
+            </p>
+        </article>
+
+    </section>
+
+    <div id="footer2"></div>
 
 </body>
 </html>
