--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <!-- bxSlider CSS file -->
     <link href="css/jquery.bxslider.css" rel="stylesheet" />
 
+    <!-- Own javascript -->
+    <script src="js/myscripts.js"></script>
 
     <!-- Talla read more koko ajan nakyvissa ja sita klikkaamalla teksti show tai haviaa-->
     <script>
@@ -70,16 +72,9 @@
 
             $(".emptyline")
             {
-                document.getElementById("demo3").innerHTML = '\n';
+                document.getElementById("eline").innerHTML = '\n';
             }
 
-            $('.bxslider').bxSlider({
-                adaptiveHeight: true,
-                auto: true,
-                autoControls: false,
-                mode: 'fade',
-                speed: 2000
-            });
         });
     </script>
 
@@ -88,14 +83,7 @@
     <header>
         <h1>Karin sivut</h1>
         <br class="clear"/>
-        <nav>
-            <ul>
-                <li><a href="javascript:void(0)">Etusivu</a></li>
-                <li><a href=career.html>Työ ja koulutus</a></li>
-                <li><a href="freetime.html">Vapaa-aika</a></li>
-                <li><a href=contact.html>Ota yhteyttä</a></li>
-            </ul>
-        </nav>
+        <div id="menu"></div>
     </header>
 
     <div class="slideshow">
@@ -139,7 +127,7 @@
             <p>Olen ohjelmistokehittäjä, jolla vankka osaaminen olio-ohjelmoinnista monissa tuotekehitysprojekteissa.
             </p>
             <span class="readmore"><div id="demo"></div></span>
-            <span class="emptyline"><div id="demo3"></div></span>
+            <span class="emptyline"><div id="eline"></div></span>
 
             <div class="message">
                 Eniten kokemusta on Java- ja C++-pohjaisten sovellusten ohjelmoinnista tietoliikennetuotteisiin.
@@ -155,7 +143,7 @@
                 Olen automaatiotekniikan AMK-insinööri.
             </p>
             <span class="readmore2"><div id="demo2"></div></span>
-            <span class="emptyline"><div id="demo3"></div></span>
+            <span class="emptyline"><div id="eline"></div></span>
 
             <div class="message2">
                 Kaurialan lukion ovien sulkeuduttua takanani 1986 meni muutama vuosi työskennellessä ja sitten opiskelu
@@ -179,41 +167,7 @@
         <br class="clear"/>
     </section>
 
-    <footer>
-        <h2 class="hidden">Our footer</h2>
-        <section id="copyright">
-            <h3 class="hidden">Copyright notice</h3>
-            <div class="wrapper">
-                <div class="social">
-                    <a href="https://www.facebook.com/kari.hannula.5" target="_blank"><img src="img/facebook.png" alt="Facebook" width="25"/></a>
-                    <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-                    <script type="IN/MemberProfile" data-id="https://www.linkedin.com/pub/kari-hannula/62/504/184" data-format="click"
-                            data-text="" data-related="false"></script>
-                </div>
-                &copy; Copyright 2015 by <a href="javascript:void(0)">Kari Himself</a>. All Rights Reserved.
-            </div>
-        </section>
-        <section class="wrapper">
-            <h3 class="hidden">Footer content</h3>
-            <article class="column midlist">
-                <h4>Yhteystiedot</h4>
-                <table class="tblfixed">
-                    <tr>
-                        <td width="40%">Sähköposti:  </td>
-                        <td width="60%"><span>kari.t.hannula@gmail.com</span></td>
-                    </tr>
-                    <tr>
-                        <td width="25%">LinkedIn:</td>
-                        <td width="75%"><script type="IN/MemberProfile" data-id="https://www.linkedin.com/pub/kari-hannula/62/504/184" data-format="click"
-                                    data-text="Kari Hannula" data-related="false"></script></td>
-                    </tr>
-                    <tr>
-                        <td width="25%">Facebook:</td>
-                        <td width="75%"><a href="https://www.facebook.com/kari.hannula.5 " target="_blank"><img src="img/facebook.png" alt="Facebook" width="25"/></a></td>
-                    </tr>
-                </table>
-            </article>
-        </section>
-    </footer>
+    <div id="footer1"></div>
+
 </body>
 </html>
