More stuff to Projektit part
Added links to GitHub projects.
Some text changes in frontpage.

--- a/freetime.html
+++ b/freetime.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Ura ja koulutus</title>
+    <title>Projektit</title>
     <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen" />
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
 
@@ -19,18 +19,40 @@
 </head>
 <body>
     <header>
-        <h1>Projektit - TODO...</h1>
+        <h1>Projektit</h1>
         <br class="clear"/>
         <div id="menu"></div>
     </header>
     <section id="boxcontent2">
         <article>
-            <h3>GitHub-projektit</h3>
-            <p>
-                Laita tänne linkki ja plaa plaa...
+            <h2>GitHub-projektit</h2>
+            <p>Näillä projekteilla on lähinnä tarkoitus osoittaa, että web-ohjelmointiakin on harrastettu ja harjoiteltu.
+                Ei välttämättä loppuun vietyjä, vaan tekniikoiden testaamista. Näitä tulee lisää ajan myötä.
             </p>
         </article>
-
+        <article>
+            <h3><div class="social"><a href="https://github.com/khannula/kotisivut" target="_blank">Kotisivut</a></div></h3>
+            <p>
+                Siis juuri nämä sivut, jotka toivon mukaan muuttuvat ja päivittyvät koko ajan paremmiksi.
+                Harjoitteluareena perus web-tekniikoille: html, css, JavaScript-kirjastot (JQuery ym.), html-form,
+                dynaaminen lataus yms.
+            </p>
+        </article>
+        <article>
+            <h3><a href="https://github.com/khannula/quizzie" target="_blank">Tietovisa</a></h3>
+            <p>
+                Quizzie on tietovisa, jossa voi valita kysymysten aihealueen ja sovellus kertoo pistemäärän.
+                Pahasti keskeneräinen ja tämä on lähinnä harjoitus koskien JSON, simple REST, Angular.js (routes,
+                controllers), Bootstrap ja Node.js tekniikoita.
+            </p>
+        </article>
+        <article>
+            <h2>Navetta (remonttireiska...)</h2>
+            <p>Vähän puhdetöitäkin eli mökin pihapiirin navetta tarvitsi ulkoremontin. Toinen pääty nostettu ja samalla alahirsiä ja runkotolppia
+                vaihdettu sekä korjattu ulkolaudoitus. Kuvia tulossa.
+            </p>
+        </article>
+        <article></article><!-- Adds empty space -->
     </section>
 
     <div id="footer2"></div>
