--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                     <div>
                         <article id="slider_content1">
                             <h3>Uusia haasteita</h3>
-                            <p>Uusia haasteita otetaan vastaan työrintamalla. Mielellään IT-alalta, mutta muukin kiinnostaa, jos osaaminen ja kiinnostus osuu kohdilleen.</p>
+                            <p>Uusia haasteita otetaan vastaan työrintamalla. Mielellään IT-alalta, mutta muukin kiinnostaa,
+                                jos osaaminen ja kiinnostus osuu kohdilleen.</p>
                         </article>
                     </div>
                 </li>
@@ -57,7 +58,7 @@
                     <div>
                         <article id="slider_content2">
                             <h3>Työkokemus</h3>
-                            <p>Vahva ohjelmistokehitystausta tietoliikennesektorilta painottuen olio-ohjelmointiin (Java, C++, tietokannat, ...).</p>
+                            <p>Vahva ohjelmistokehitystausta (Java, C++, tietokannat, scrum). Osaamista myös web-teknologioista (html, css, JavaScript, MongoDB). </p>
                         </article>
                     </div>
                 </li>
@@ -66,7 +67,8 @@
                     <div>
                         <article id="slider_content3">
                             <h3>Uuden oppimista</h3>
-                            <p>Opiskellut liiketoimintaosaamista TAMK:ssa ja tällä hetkellä opiskelemassa hyvinvointiteknologian ylempää AMK-tutkintoa. Yrittäjäkurssikin on käyty varmuuden vuoksi.</p>
+                            <p>Opiskellut liiketoimintaosaamista TAMK:ssa ja tällä hetkellä opiskelemassa hyvinvointiteknologian
+                                ylempää AMK-tutkintoa.</p>
                         </article>
                     </div>
                 </li>
