Navetta pics added
Only pictures, code (slider) still missing.

--- a/freetime.html
+++ b/freetime.html
@@ -39,17 +39,25 @@
             </p>
         </article>
         <article>
+            <h3><a href="https://github.com/khannula/kontaktor.git" target="_blank">Kontaktor</a></h3>
+            <p>
+                Kontaktilista-sovellus, jossa voi katsella omaa kontaktilistaansa ja hakea nimen perusteella.
+                Lisäys, muokkaus ja poistaminen seuraava vaihe. Harjoitus koskien JSON, REST, Angular.js, Bootstrap ja
+                Node.js tekniikoita. Melko hyvin responsiivinen.
+            </p>
+        </article>
+        <article>
             <h3><a href="https://github.com/khannula/quizzie" target="_blank">Tietovisa</a></h3>
             <p>
                 Quizzie on tietovisa, jossa voi valita kysymysten aihealueen ja sovellus kertoo pistemäärän.
                 Pahasti keskeneräinen ja tämä on lähinnä harjoitus koskien JSON, simple REST, Angular.js (routes,
-                controllers), Bootstrap ja Node.js tekniikoita.
+                controllers) ja Node.js tekniikoita.
             </p>
         </article>
         <article>
             <h2>Navetta (remonttireiska...)</h2>
-            <p>Vähän puhdetöitäkin eli mökin pihapiirin navetta tarvitsi ulkoremontin. Toinen pääty nostettu ja samalla alahirsiä ja runkotolppia
-                vaihdettu sekä korjattu ulkolaudoitus. Kuvia tulossa.
+            <p>Vähän puhdetöitäkin eli mökin pihapiirin navetta tarvitsi ulkoremontin. Toinen takapääty nostettu ja samalla alahirsiä ja runkotolppia
+                vaihdettu sekä korjattu ulkolaudoitus. Etupäädyn ulkolaudoitus uusittu kokonaan. Kuvia tulossa.
             </p>
         </article>
         <article></article><!-- Adds empty space -->
