--- a/freetime.html
+++ b/freetime.html
@@ -13,6 +13,9 @@
     <!-- include extern jQuery file but fall back to local file if extern one fails to load !-->
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript">window.jQuery || document.write('<script type="text\/javascript" src="js\/1.11.1.jquery.min"><\/script>')</script>
+    <!-- JSSOR slider stuff -->
+    <script src="js/myslider.js"></script>
+    <script src="js/jssor.slider.mini.js"></script>
 
     <script src="js/myscripts.js"></script>
 
@@ -56,10 +59,84 @@
         </article>
         <article>
             <h2>Navetta (remonttireiska...)</h2>
-            <p>Vähän puhdetöitäkin eli mökin pihapiirin navetta tarvitsi ulkoremontin. Toinen takapääty nostettu ja samalla alahirsiä ja runkotolppia
-                vaihdettu sekä korjattu ulkolaudoitus. Etupäädyn ulkolaudoitus uusittu kokonaan. Kuvia tulossa.
+            <p>Vähän puhdetöitäkin kesällä 2015 eli mökin pihapiirin navetta tarvitsi ulkoremontin. Toinen takapääty nostettu ja samalla alahirsiä ja runkotolppia
+                vaihdettu sekä korjattu ulkolaudoitus. Etupäädyn ulkolaudoitus ja yläikkunat uusittu kokonaan.
             </p>
         </article>
+        <article>
+            <!-- Jssor Slider Begin -->
+            <!-- To move inline styles to css file/block, please specify a class name for each element. -->
+            <div id="slider1_container" style="position: relative; top: 0px; left: 0px; width: 800px;
+                height: 456px; background: #191919; overflow: hidden;  border: #000 5px solid;">
+
+                <!-- Loading Screen -->
+                <div u="loading" style="position: absolute; top: 0px; left: 0px;">
+                    <div style="filter: alpha(opacity=70); opacity:0.7; position: absolute; display: block;
+                        background-color: #000000; top: 0px; left: 0px;width: 100%;height:100%;">
+                    </div>
+                    <div style="position: absolute; display: block; background: none /* url(../img/loading.gif) no-repeat center center;*/
+                        top: 0px; left: 0px;width: 100%;height:100%;">
+                    </div>
+                </div>
+
+                <!-- Slides Container -->
+                <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 800px; height: 356px; overflow: hidden;">
+                    <div>
+                        <img u="image" src="img/navetta/797.jpg" alt="yleiskuva" />
+                        <img u="thumb" src="img/navetta/797.jpg" alt="yleiskuva thumbnail" />
+                    </div>
+                    <div>
+                        <img u="image" src="img/navetta/Ixus40_287.jpg" alt="Toka kuva" />
+                        <img u="thumb" src="img/navetta/Ixus40_287_thumb.jpg" alt="Toka kuva thumbnail" />
+                    </div>
+                    <div>
+                        <img u="image" src="img/navetta/Ixus40_295.jpg" alt="Kolmas kuva" />
+                        <img u="thumb" src="img/navetta/Ixus40_295_thumb.jpg" alt="Kolmas kuva thumbnail" />
+                    </div>
+                    <div>
+                        <img u="image" src="img/navetta/622.jpg" alt="Neljäs kuva" />
+                        <img u="thumb" src="img/navetta/622_thumb.jpg" alt="Neljäs kuva thumbnail" />
+                    </div>
+                    <div>
+                        <img u="image" src="img/navetta/721.jpg" alt="Viides kuva" />
+                        <img u="thumb" src="img/navetta/721_thumb.jpg" alt="Viides kuva thumbnail" />
+                    </div>
+                    <div>
+                        <img u="image" src="img/navetta/741.jpg" alt="Kuudes kuva" />
+                        <img u="thumb" src="img/navetta/741_thumb.jpg" alt="Kuudes kuva thumbnail" />
+                    </div>
+                    <div>
+                        <img u="image" src="img/navetta/618.jpg" alt="Seiska kuva" />
+                        <img u="thumb" src="img/navetta/618_thumb.jpg" alt="Seiska kuva thumbnail" />
+                    </div>
+                </div>
+
+                <!--#region Arrow Navigator Skin Begin - see style.css -->
+                <!-- Arrow Left - TODO ?? -->
+                <span u="arrowleft" class="jssora05l" style="top: 158px; left: 8px;"></span>
+                <!-- Arrow Right -->
+                <span u="arrowright" class="jssora05r" style="top: 158px; right: 8px"></span>
+                <!--#endregion Arrow Navigator Skin End -->
+                <!--#region Thumbnail Navigator Skin Begin - see style.css -->
+                <!-- Help: http://www.jssor.com/development/slider-with-thumbnail-navigator-jquery.html -->
+
+                <!-- thumbnail navigator container -->
+                <div u="thumbnavigator" class="jssort01" style="left: 0px; bottom: 0px;">
+                    <!-- Thumbnail Item Skin Begin -->
+                    <div u="slides" style="cursor: default;">
+                        <div u="prototype" class="p">
+                            <div class=w><div u="thumbnailtemplate" class="t"></div></div>
+                            <div class=c></div>
+                        </div>
+                    </div>
+                    <!-- Thumbnail Item Skin End -->
+                </div>
+                <!--#endregion Thumbnail Navigator Skin End -->
+                <a style="display: none" href="http://www.jssor.com">Bootstrap Slider</a>
+            </div>
+            <!-- Jssor Slider End -->
+        </article>
+
         <article></article><!-- Adds empty space -->
     </section>
 
