Missing thumbnail pic added
thumb_707.jpg

--- a/freetime.html
+++ b/freetime.html
@@ -83,7 +83,7 @@
                 <div u="slides" style="cursor: move; position: absolute; left: 0px; top: 0px; width: 800px; height: 356px; overflow: hidden;">
                     <div>
                         <img u="image" src="img/navetta/797.jpg" alt="yleiskuva" />
-                        <img u="thumb" src="img/navetta/797.jpg" alt="yleiskuva thumbnail" />
+                        <img u="thumb" src="img/navetta/thumb_797.jpg" alt="yleiskuva thumbnail" />
                     </div>
                     <div>
                         <img u="image" src="img/navetta/Ixus40_287.jpg" alt="Toka kuva" />
