Responsive design added
Pages responsive now. Menu, main slider etc. dropped for smaller
resolution and some fine tunig to test padding etc. done. See styles.css

--- a/freetime.html
+++ b/freetime.html
@@ -60,7 +60,7 @@
         <article>
             <h2>Navetta (remonttireiska...)</h2>
             <p>Vähän puhdetöitäkin kesällä 2015 eli mökin pihapiirin navetta tarvitsi ulkoremontin. Toinen takapääty nostettu ja samalla alahirsiä ja runkotolppia
-                vaihdettu sekä korjattu ulkolaudoitus. Etupäädyn ulkolaudoitus ja yläikkunat uusittu kokonaan.
+                vaihdettu sekä korjattu ulkolaudoitus. Etupäädyn ulkolaudoitus ja yläikkunat uusittu kokonaan. <span style="color: red">Kuvia ei ole optimoitu, pahoittelen.</span>
             </p>
         </article>
         <article>
@@ -140,7 +140,7 @@
         <article></article><!-- Adds empty space -->
     </section>
 
-    <div id="footer2"></div>
+    <div id="footer2" class="hidden-item-615 hidden-item-915"></div>
 
 </body>
 </html>
