--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
 <nav>
     <ul>
         <li><a href="index.html">Etusivu</a></li>
-        <li><a href=career.html>Työ ja koulutus</a></li>
+        <li class="hidden-item-615"><a href=career.html>Työ ja koulutus</a></li>
         <li><a href="freetime.html">Projektit</a></li>
         <li><a href=contact.html>Ota yhteyttä</a></li>
     </ul>
