Mobile view tuning
Removed social link icons from lower right corner, when minimized under
615 pix wide.

--- a/footer1.html
+++ b/footer1.html
@@ -10,7 +10,7 @@
     <section id="copyright">
         <h3 class="hidden">Copyright notice</h3>
         <div class="wrapper">
-            <div class="social">
+            <div class="social hidden-item-615">
                 <a href="https://www.facebook.com/kari.hannula.5" target="_blank"><img src="img/facebook.png" alt="Facebook" width="25"/></a>
                 <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
                 <script type="IN/MemberProfile" data-id="https://www.linkedin.com/pub/kari-hannula/62/504/184" data-format="click"
